fixed pixel on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -259,11 +259,11 @@ footer{
   }
 
   .showcase::after {
-    height: 80vh;
+    height: 65vh;
   }
 
   .Intro {
-  	margin-left: 40px;
+  	margin-left: 15px;
   }
 
   .Intro h2{
